# YoutubeTranslateAndDubbing

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/dubbing_agent/: __init__.py  cli.py  preflight.py  state.py
src/dubbing_agent/graph/: __init__.py  build_graph.py  nodes.py  routes.py
src/dubbing_agent/langchain_layer/: __init__.py  agents.py  chains.py  runtime.py  schemas.py  tools.py
src/dubbing_agent/services/: __init__.py  media_services.py
src/dubbing_agent/utils/: __init__.py  duration.py  paths.py
